# 22game

./: .gitignore  22game.cpp  CMakeLists.txt  README.md  basic.cpp  basic.h  bot.cpp  bot.h  card.cpp  card.h  card_list.cpp  card_list.h  consoleIO.cpp  consoleIO.h  consolePosix.cpp  consoleWin.cpp  console_io.cpp  console_io.h  deck.cpp  deck.h  game.cpp  game.h  game_mode.h  human.cpp  human.h  hunter.cpp  hunter.h  input.cpp  input.h  io_custom.cpp  io_custom.h  mainMenu.cpp  mainMenu.h  main_menu.cpp  main_menu.h  output.cpp  output.h  player.cpp  player.h  points.cpp  (+6 more)
